--- a/app/assets/stylesheets/partials/_event.scss
+++ b/app/assets/stylesheets/partials/_event.scss
@@ -1,6 +1,6 @@
 #minified {
   .sponsor {
-    margin-top: 15px;
+    margin-right: 10px;
     max-width: 90px;
     max-height: 60px;
   }
@@ -10,4 +10,8 @@
 #sidebar {
   background: #fdfdfd;
   padding: 32px 20px;
+}
+
+.event {
+  margin-top: 15px;
 }
