--- a/app/views/dashboard/wall_of_fame.html.haml
+++ b/app/views/dashboard/wall_of_fame.html.haml
@@ -3,6 +3,5 @@
     .large-12.columns
       %h2 Coaches
       %p.lead
-        Do you want to help out by coaching at our workshops? Read our #{ link_to "teaching guide", teaching_guide_path } and sign up as a Coach!
+        Would you like to help out by coaching at one of our workshops? Read our #{ link_to "teaching guide", teaching_guide_path } then sign up as a coach.
 = render partial: '/coach/coach', locals: { coaches: @coaches }
-                  
