--- a/app/views/members/edit.html.haml
+++ b/app/views/members/edit.html.haml
@@ -2,7 +2,7 @@
   .row
     .large-12.columns
       %h2 Update your details
-      .subheader Make sure your details are always up to date!
+      .subheader Please make sure your details are always up to date.
   .row
     .large-12.columns
       .avatar-container
