--- a/app/views/session_invitation_mailer/invite_coach.html.haml
+++ b/app/views/session_invitation_mailer/invite_coach.html.haml
@@ -14,13 +14,13 @@
               %td
                 %h3 Hi #{@member.name}
                 %p.lead
-                  We are looking for coaches for the workshop that will take place on #{humanize_date_with_time(@session.date_and_time, @session.time)}
+                  Invites for our next workshop are now open and we are looking for coaches. The workshop that will take place on #{humanize_date_with_time(@session.date_and_time, @session.time)}.
 
-                %p At the workshop you will be guiding students while they work through our tutorials. Or in other programming related areas that they request help in.
+                %p At the workshop you will be helping students as they work their way through one of our tutorials or a personal project they need help. Don't worry we'll only match you with someone who you'll be able to help.
 
-                %p You can find all our tutorials at #{link_to "http://codebar.github.io/tutorials", "http://codebar.github.io/tutorials/"}. If you would like to improve any of the existing content, you can issue a pull request to our #{link_to "GitHub repository", "https://github.com/codebar/tutorials"}
+                %p You can find all of our tutorials at #{link_to "http://tutorials.codebar.io/", "http://tutorials.codebar.io/"}. If you would like to improve any of the existing content, you can issue a pull request to our #{link_to "GitHub repository", "https://github.com/codebar/tutorials"}
 
-                %p Before attending, make sure you read and understand our #{link_to "code of conduct", "http://codebar.io/code-of-conduct"}. We have a zero tolerance policy and expect everyone to behave appropriately. You should also go through our #{link_to "How to be an effective teacher", "http://codebar.io/effective-teacher-guide"}. If you have anything to add to it, please open a pull request or an issue.
+                %p Before attending, make sure you have read and understood our #{link_to "Code of Conduct", "http://codebar.io/code-of-conduct"}. We have a zero tolerance policy towards conduct and expect everyone to behave appropriately. You should also go through our #{link_to "How to be an effective teacher", "http://codebar.io/effective-teacher-guide"}.
 
                 %p Please note: We do not accept any RSVPs over email.
 
