--- a/app/views/session_invitation_mailer/invite_student.html.haml
+++ b/app/views/session_invitation_mailer/invite_student.html.haml
@@ -1,7 +1,7 @@
-=render partial: 'shared_mailers/header', locals: { title: "Workshop invitation" }
+=render partial: 'shared_mailers/header', locals: { title: "Workshop Student Invitation" }
 %body{ bgcolor: "#FFFFFF" }
 
-  =render partial: 'shared_mailers/body_header', locals: { title: "Workshop invitation" }
+  =render partial: 'shared_mailers/body_header', locals: { title: "Workshop Student Invitation" }
 
   %table{ class: "body-wrap"}
     %tr
