--- a/app/views/shared_mailers/_social.html.haml
+++ b/app/views/shared_mailers/_social.html.haml
@@ -6,10 +6,10 @@
         %tr
           %td
 
-            %h5 Connect with Us:
+            %h5 Connect with us:
             %p
-              %a{ href: "https://www.facebook.com/codebarHQ", class: 'soc-btn fb'} Like us on facebook
-              %a{ href: "https://twitter.com/codebar", class: "soc-btn tw" }Follow us on twitter
+              %a{ href: "https://www.facebook.com/codebarHQ", class: 'soc-btn fb'} Like us on Facebook
+              %a{ href: "https://twitter.com/codebar", class: "soc-btn tw" }Follow us on Twitter
               %a{ href: "https://www.facebook.com/groups/codebarcommunity", class: 'soc-btn fb'} Join our facebook community
 
 
