--- a/app/views/workshops/show.html.haml
+++ b/app/views/workshops/show.html.haml
@@ -13,7 +13,7 @@
         .row
           .medium-12.columns
             %p.lead
-              Attend our workshops to learn programming in a safe and supportive environment at your own pace, or to share your knowledge and mentor our students.
+              Attend our workshops to learn programming in a safe and supportive environment at your own pace, or to share your knowledge and coach our students.
 
             - unless current_user and current_user.banned?
               .medium-12.columns
