--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -9,7 +9,7 @@
     .row
       .large-12.columns
         %p.lead
-          Our goal is to enable underrepresented groups to learn programming in a safe and collaborative environment and expand their career opportunities. To achieve this, we run free weekly workshops, regular events and try to create opportunities for our students making technology and coding more accessible.
+          Our goal is to enable underrepresented people to learn programming in a safe and collaborative environment and expand their career opportunities. To achieve this we run free weekly workshops, regular one-off events and try to create opportunities for our students making technology and coding more accessible.
     - if @testimonials.any?
       .row
         .large-offset-1.large-11.columns
@@ -19,35 +19,32 @@
     .row#showcase
       .large-4.columns
         .text-center
-          %h4 Our students
-          = image_tag "students.png"
-        %p Our students come from a variety of backgrounds. Some want to become developers and others would simply like to learn the basics of coding in a supportive and social environment.
+          %h4 Students
+        %p Our students come from a variety of backgrounds. Some want to become full-time developers, whereas some would like to learn the basics of coding in a supportive environment.
         %p
-          Sign up to join our vibrant community and to attend our workshops and programming events.
+          Sign up to join our vibrant community and attend our workshops.
 
         .text-center
-          = link_to "Learn to code!", new_member_path, class: 'button secondary tiny'
+          = link_to "Sign up as a student", new_member_path, class: 'button tiny'
       .large-4.columns
         .text-center
-          %h4 What we teach
-          = image_tag "teaching.png"
+          %h4 Coaches
         %p
-          We encourage new students to get started by working on our #{link_to "tutorials", "http://tutorials.codebar.io"} and learning HTML & CSS before moving into JavaScript, Ruby or Python. We also help them understand programming concepts!
-        %p We are always on the lookout for more developers to join our community and teach at our workshops.
+          We encourage new students to work on our HTML/CSS, JavaScript, Ruby, Python or Git #{link_to "tutorials", "http://tutorials.codebar.io"}. We also help them understand programming concepts.
+        %p Therefore  are always on the lookout for more developers to join our community and help coach at our workshops.
         .text-center
-          = link_to "Help out by becoming a coach", new_member_path, class: 'button tiny'
+          = link_to "Sign up as a coach", new_member_path, class: 'button tiny'
       .large-4.columns
         .text-center
           %h4 Workshops
-          = image_tag "collaboration.png"
-          %br
-        %p We are sponsored and hosted by some amazing companies who support our cause. We usually spend the first 30' checking people in and having some food and a chat, followed by a lightning talk and <strong>lots of coding</strong>!
+        %p
+          We are hosted by some amazing companies who support our cause. Our normal format is 30 minutes of socialising with food and drink, followed by a lightning talk then coding.
         %p
           Help our expansion and enable us to provide help and support to our chapters by hosting and sponsoring our workshops.
 
 
         .text-center
-          = link_to "Sponsor a workshop", "http://donate.codebar.io", class: 'button tiny'
+          = mail_to "hello@codebar.io", "Host a workshop", class: 'button tiny'
 
 
   %section#chapter.stripe
@@ -66,7 +63,7 @@
                 %h4= date
                 = render workshops
         .large-4.columns#chapters
-          %h3 Local chapters
+          %h3 Chapters
           %ul.no-bullet
             - @chapters.each do |chapter|
               %li
