--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -3,8 +3,8 @@
     %ul.title-area
       %li.name
         =link_to root_path do
-          .brand 
-            = image_tag "logo.png", size: "148x40"
+          .brand
+            = image_tag "logo.png", alt: "codebar logo", size: "148x40"
       %li.toggle-topbar.menu-icon
         = link_to '#' do
           .fa.fa-stack-2x.fa-list
@@ -12,7 +12,7 @@
     %section.top-bar-section
       %ul.right
         %li
-          = link_to 'https://medium.com/the-codelog' do
+          = link_to 'https://medium.com/@codebar' do
             %span Blog
         - if current_page?(events_path)
           %li.active
