--- a/app/views/members/step1.html.haml
+++ b/app/views/members/step1.html.haml
@@ -3,23 +3,22 @@
     .medium-12.columns
       %h1 Almost there...
       %p
-        We need some more details from you to finish creating your account. We use these to help run our events &amp; match you
-        with a suitable #{@member.coach? ? "student" : "coach"}.
+        We need some more details from you to finish creating your account. We use these to help run our events.
 
   = simple_form_for @member, method: :put, url: {action: :step1}, html: {class: "sign-up-wizard"} do |f|
     .row
       .large-6.large-offset-3.columns
-        = f.input :name, label: "First name", required: true, placeholder: "ex. Grace"
+        = f.input :name, label: "First name", required: true, placeholder: "Grace"
     .row
       .large-6.large-offset-3.columns
-        = f.input :surname, required: true, placeholder: "ex. Hopper"
+        = f.input :surname, required: true, placeholder: "Hopper"
     .row
       .large-6.large-offset-3.columns
-        = f.input :pronouns, label: "What pronouns do you use?", placeholder: "ex. she/her"
+        = f.input :pronouns, label: "What pronouns do you use?", placeholder: "she/her/they"
 
     .row
       .large-6.large-offset-3.columns
-        = f.input :email, label: "Email address", hint: "We will send you invitations to our events via email.", required: true
+        = f.input :email, label: "Email address", hint: "We send you invitations to our events via email.", required: true
 
     .row
       .large-6.large-offset-3.columns
