--- a/app/views/members/_new.html.haml
+++ b/app/views/members/_new.html.haml
@@ -6,7 +6,7 @@
       = f.input :surname
   .row
     .large-6.columns
-      = f.input :pronouns, label: "What pronouns do you use?", placeholder: "e.g. she/her"
+      = f.input :pronouns, label: "What pronouns do you use?", placeholder: "e.g. she/her/they"
 
   .row
     .large-6.columns
