--- a/app/views/workshops/show.html.haml
+++ b/app/views/workshops/show.html.haml
@@ -22,7 +22,7 @@
   .stripe.reverse
     .row
       .medium-8.columns
-        %h3 Location
+        %h3 Venue
         %p
           %strong= @workshop.host.name
           %br
@@ -36,12 +36,9 @@
           - @workshop.sponsors.each do |sponsor|
             %li
               .row
-                .large-4.columns
-                  = image_tag sponsor.avatar, class: 'sponsor'
-                .large-8.columns
-                  =link_to sponsor.name, sponsor.website
-                  %p
-                    = sponsor.description
+                .large-5.columns
+                  =link_to sponsor.website do
+                    =image_tag sponsor.avatar, class: 'sponsor'
             %br
 
 
