fixing the go squared image in the footer

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -31,4 +31,4 @@
   .row
     .large-12.columns
       = link_to "https://www.gosquared.com/", title: "GoSquared.com" do
-        =image_tag "https://dl.dropboxusercontent.com/u/108831317/gosq.png"
+        = image_tag "gosq.png", size: "169x31"
