update copy amends and rebase from master

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -9,7 +9,7 @@
     .row
       .large-12.columns
         %p.lead
-          Our goal is to enable underrepresented people to learn programming in a safe and collaborative environment and expand their career opportunities. To achieve this we run free weekly workshops, regular one-off events and try to create opportunities for our students making technology and coding more accessible.
+          Our goal is to enable underrepresented people to learn programming in a safe and collaborative environment and expand their career opportunities. To achieve this we run free regular workshops, regular one-off events and try to create opportunities for our students making technology and coding more accessible.
     - if @testimonials.any?
       .row
         .large-offset-1.large-11.columns
