--- a/app/views/session_invitation_mailer/invite_student.html.haml
+++ b/app/views/session_invitation_mailer/invite_student.html.haml
@@ -14,13 +14,13 @@
               %td
                 %h3 Hi, #{@member.name}
                 %p.lead
-                  If you will be attending the workshop please RSVP as we need to know who is coming to make sure we have enough coaches and food around.
+                  If you would like to attend the workshop please RSVP as we need to know who is coming to make sure we have enough coaches and food.
                 %p
-                  In our workshops, you can work through any of our #{link_to "tutorials", "http://codebar.github.io/tutorials" } or get help and guidance on other technologies or your personal projects. We believe that everyone should be entitled to free learning and our community has #{ link_to "a lot of devoted developers", full_url_for(coaches_url)} who help out weekly by coaching.
+                  In our workshops, you can work through any of our #{link_to "tutorials", "http://codebar.github.io/tutorials" } or get help and guidance on another technology for your personal project. We believe that everyone should be entitled to free learning and our community has #{ link_to "a lot of devoted developers", full_url_for(coaches_url)} who help out by coaching.
                 %p You will also get the opportunity to meet other people interested in coding and collaborate with them.
                 %p Please note: We do not accept any RSVPs over email.
 
-                %p.callout If you are working through the tutorials outside our workshop or need any other help or advice #{ link_to "join the codebar Slack", "https://codebar-slack.herokuapp.com"}.
+                %p.callout If you are working through the tutorials outside our workshop, or need any other help or advice #{ link_to "join the codebar Slack", "https://codebar-slack.herokuapp.com"}.
 
 
         .content
