--- a/app/views/dashboard/participant_guide.html.haml
+++ b/app/views/dashboard/participant_guide.html.haml
@@ -9,13 +9,13 @@
     .large-12.columns
       %h3#attendance Attendance Policy
       %p
-        codebar is, and always has been, open to all levels of coding experience. While most of the tutorials on our website are aimed at newcomers to web development, we intend to continue our open-door policy for any student who needs coach support on their own projects. Due to the fact that our workshops are frequently oversubscribed, we ask students to respect the following expectations for participation in our weekly workshops:
+        codebar is, and always has been, open to all levels of coding experience. While most of the tutorials on our website are aimed at newcomers to web development, we intend to continue our open-door policy for any student who needs coach support on their own projects. Due to the fact that our workshops are frequently oversubscribed, we ask students to respect the following expectations for participation in our workshops:
 
         %ol
           %li
             In order to attend a workshop,
             .underline you must be on the RSVP list.
-            If you have not RSVP’d or were not allocated a spot, you will not be admitted into an event.
+            If you have not RSVP’d or were not allocated a spot, you will not be admitted into a workshop.
 
           %li
             If you can no longer attend a workshop,
@@ -27,14 +27,14 @@
             Our workshops are already overcrowded and we cannot make any exceptions. If your friend meets our eligibility criteria, get them to sign up and RSVP themselves.
 
           %li
-            Please be respectful of our hosts. Do not show up exceedingly early to a workshop (not earlier than 15 minutes before the event begins) and try to leave your workstation clean and as you found it.
+            Please be respectful of our hosts. Do not show up exceedingly early to a workshop (not earlier than 15 minutes before the event begins) and try to leave the workstation clean and as you found it.
 
           %li
             .underline Please do not work on projects that were assigned as part of any bootcamp curriculum.
             Talk to your bootcamp adviser if you feel like you need additional support with your coursework. If you are currently on a bootcamp, we welcome your attendance, but we encourage you to use your time at codebar to develop skills that are outside the normal scope of your studies there.
 
           %li
-            Projects that involve specific frameworks/libraries (Rails, NodeJS, Meteor, Angular, Ember, etc) or languages that are not part of the codebar tutorials (anything other than Ruby or Javascript) are welcome, but we cannot guarantee that a coach will be available to help you. In these cases we recommend selecting a codebar tutorial or katas (codewars.com or exercism.io) as a back-up option.
+            Projects that involve specific frameworks/libraries (Rails, NodeJS, Meteor, Angular, Ember, React, etc) or languages that are not part of the codebar tutorials (anything other than Ruby or Javascript) are welcome but we cannot guarantee that a coach will be available to help you. In these cases we recommend selecting a codebar tutorial or katas (codewars.com or exercism.io) as a back-up option.
 
 
       %h4
@@ -56,6 +56,6 @@
 
       %p codebar is first and foremost a resource for students who cannot afford formal training through coding bootcamps or university degrees, for financial reasons or otherwise. We have strived to create an inclusive, welcoming community, and so far, we have not had to implement a formal policy to enforce the eligibility criteria -- we have left this to the honesty and good faith of the students.
 
-      %p If you are unsure whether you are eligible, please get in touch first. If we determine that you have signed up and do not belong to an eligible group, we will permanently suspend your student invitations without warning.
+      %p If you are unsure whether you are eligible, please get in touch. If we determine that you have signed up and do not belong to an eligible group, we will permanently suspend your student invitations without warning.
 
       %p We take this issue very seriously, and we appreciate your cooperation and understanding.
