--- a/app/views/member_mailer/welcome_coach.html.haml
+++ b/app/views/member_mailer/welcome_coach.html.haml
@@ -6,11 +6,11 @@
 
 %p
   - if @member.subscriptions.any?
-    You'll automatically receive invitations to our weekly workshops via email.
+    You'll automatically receive invitations to our workshops via email.
   - else
     We send out invitations to our events via email.
     = link_to "Sign up from the subscriptions page", subscriptions_url
-    to receive invitations to our weekly workshops.
+    to receive invitations to our workshops.
   Places are limited, so be sure to respond quickly if you want to attend.
 
 %p
