--- a/app/views/layouts/_aside.html.haml
+++ b/app/views/layouts/_aside.html.haml
@@ -16,7 +16,7 @@
     %li= link_to 'My Dashboard', dashboard_path
     %li= link_to 'Invitations', invitations_path
     %li= link_to 'Manage subscriptions', subscriptions_path
-    %li= link_to 'Update details', edit_member_path
+    %li= link_to 'Update your details', edit_member_path
     %li
       = link_to logout_path do
         Sign out
