Organising coaches page by chapter
This breaks the coaches page into two main pages:

https://codebar.io/coaches - A list of chapters
https://codebar.io/coaches(/:chapter_name) - The coaches in the chapter

Closes #540 and closes #544

--- a/app/views/coaches/index.html.haml
+++ b/app/views/coaches/index.html.haml
@@ -4,4 +4,6 @@
       %h2 Coaches
       %p.lead
         Would you like to help out by coaching at one of our workshops? Read our #{ link_to "teaching guide", teaching_guide_path } then sign up as a coach.
-= render partial: '/coach/coach', locals: { coaches: @coaches }
+
+= render '/coaches/chapters_list', chapters: chapters
+
