--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -17,26 +17,26 @@
 
   .stripe
     .row#showcase
-      .large-4.columns
+      .medium-4.columns
         .text-center
-          %h4 Students
+          %h3 Students
         %p Our students come from a variety of backgrounds. Some want to become full-time developers, whereas some would like to learn the basics of coding in a supportive environment.
         %p
           Sign up to join our vibrant community and attend our workshops.
 
         .text-center
-          = link_to "Sign up as a student", new_member_path, class: 'button tiny'
-      .large-4.columns
+          = link_to "Sign up as a student", new_member_path, class: 'button'
+      .medium-4.columns
         .text-center
-          %h4 Coaches
+          %h3 Coaches
         %p
           We encourage new students to work on our HTML/CSS, JavaScript, Ruby, Python or Git #{link_to "tutorials", "http://tutorials.codebar.io"}. We also help them understand programming concepts.
         %p Therefore  are always on the lookout for more developers to join our community and help coach at our workshops.
         .text-center
-          = link_to "Sign up as a coach", new_member_path, class: 'button tiny'
-      .large-4.columns
+          = link_to "Sign up as a coach", new_member_path, class: 'button'
+      .medium-4.columns
         .text-center
-          %h4 Workshops
+          %h3 Workshops
         %p
           We are hosted by some amazing companies who support our cause. Our normal format is 30 minutes of socialising with food and drink, followed by a lightning talk then coding.
         %p
@@ -44,7 +44,7 @@
 
 
         .text-center
-          = mail_to "hello@codebar.io", "Host a workshop", class: 'button tiny'
+          = mail_to "hello@codebar.io", "Host a workshop", class: 'button'
 
 
   %section#chapter.stripe
