--- a/app/views/workshops/show.html.haml
+++ b/app/views/workshops/show.html.haml
@@ -28,9 +28,7 @@
           %br
             = @host_address.to_html
           %br
-        %iframe{ width: '100%', height: '350', frameborder: '0', scrolling: 'no', marginheight: '0', marginwidth: '0', src: %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&t=m&z=15&output=embed} }
-        = link_to "View larger map", %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&hq=&t=m&z=15}, style: "color:#0000FF;text-align:left"
-      .large-4.columns
+      .medium-4.columns
         %h3 Sponsors
         %ul.no-bullet
           - @workshop.sponsors.each do |sponsor|
@@ -39,7 +37,12 @@
                 .large-5.columns
                   =link_to sponsor.website do
                     =image_tag sponsor.avatar, class: 'sponsor'
-            %br
+    .row
+      .medium-12.columns
+      %iframe{ width: '100%', height: '350', frameborder: '0', scrolling: 'no', title: 'location', marginheight: '0', marginwidth: '0', src: %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&t=m&z=15&output=embed} }
+      = link_to "View larger map", %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&hq=&t=m&z=15}, style: "color:#0000FF;text-align:left"
+
+
 
 
   .stripe.reverse
