Review changes as per @dansteele feedback
Moved the `helper_method` calls above the private method to make it
clearer that they're not private. They're tricky to unit test from the
controller spec (they're called in the view). As the feature spec
touches them, I clear the controller spec.

Moved the method that finds all the members in a chapter and sorts by
attendance to the Chapter model. I need to find a better way of
approaching it, but the current DB structure confuses the heck out of
me. Either way it has a spec that'll seed the DB so I can work on it.

--- a/app/views/coaches/_list.html.haml
+++ b/app/views/coaches/_list.html.haml
@@ -3,4 +3,4 @@
     .large-12.columns
       %ul.small-block-grid-1.medium-block-grid-2.large-block-grid-3.coach-list
         - coaches.each do |coach|
-          =render "coach", coach: coach
+          =render 'coach', coach: coach
