--- a/app/views/coaches/show.html.haml
+++ b/app/views/coaches/show.html.haml
@@ -6,4 +6,4 @@
         =chapter.name
       %p.lead
         Would you like to help out by coaching at one of our workshops? Read our #{ link_to "teaching guide", teaching_guide_path } then sign up as a coach.
-= render '/coaches/list', coaches: coaches
+= render 'list', coaches: coaches
