--- a/app/views/courses/_course_actions.html.haml
+++ b/app/views/courses/_course_actions.html.haml
@@ -1,6 +1,7 @@
-- if logged_in?
-  - if @course.date_and_time.future?
-    = link_to "RSVP", course_rsvp_path(@course), class: 'button'
-- else
-  = link_to "Sign up", new_member_path, class: 'button'
-  = link_to "Log in", login_path, class: 'button'
+%p
+  - if logged_in?
+    - if @course.date_and_time.future?
+      = link_to "RSVP", course_rsvp_path(@course), class: 'button'
+  - else
+    = link_to "Sign up", new_member_path, class: 'button'
+    = link_to "Log in", redirect_path, class: 'button'
