create course_actions partial

--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -20,11 +20,7 @@
         %br
   .row
     .large-12.columns
-      - if logged_in?
-        - if @course.date_and_time.future?
-          #{link_to("RSVP", course_rsvp_path(@course), class: 'button')}
-      - else
-        #{link_to("Sign up", new_member_path, class: 'button')}
+      = render 'course_actions'
 
 .stripe.reverse
   .row
