--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -9,7 +9,7 @@
 
   .row
     .medium-4.columns#host
-      = render partial: 'meetings/actions'
+      = render partial: 'meeting_actions'
 
     .medium-8.columns
       %h4 Agenda
