add redirect for events after login

--- a/app/views/courses/_course_actions.html.haml
+++ b/app/views/courses/_course_actions.html.haml
@@ -3,4 +3,4 @@
     = link_to "RSVP", course_rsvp_path(@course), class: 'button'
 - else
   = link_to "Sign up", new_member_path, class: 'button'
-  = link_to "Log in", redirect_path, class: 'button'
+  = link_to "Log in", login_path, class: 'button'
