--- a/app/views/events/_event_actions.html.haml
+++ b/app/views/events/_event_actions.html.haml
@@ -12,6 +12,6 @@
           = t('events.attend_as_coach')
     - else
       = link_to "Sign up", new_member_path, class: 'button'
-      = link_to "Log in", redirect_path, class: 'button'
+      = link_to "Log in", login_path, class: 'button'
   - else
     %em= t('event.not_open_for_rsvp')
