--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -8,7 +8,7 @@
 
   .row
     .large-10.columns
-      = render partial: 'events_actions'
+      = render partial: 'event_actions'
       %br
       %br
 
