--- a/app/views/meetings/_meeting_actions.html.haml
+++ b/app/views/meetings/_meeting_actions.html.haml
@@ -30,4 +30,4 @@
 
   - else
     = link_to "Sign up", new_member_path, class: 'button'
-    = link_to "Log in", redirect_path, class: 'button'
+    = link_to "Log in", login_path, class: 'button'
