--- a/app/views/workshops/_workshop_actions.html.haml
+++ b/app/views/workshops/_workshop_actions.html.haml
@@ -31,4 +31,4 @@
 
 - elsif not logged_in?
   = link_to "Sign up", new_member_path, class: 'button'
-  = link_to "Log in", redirect_path, class: 'button'
+  = link_to "Log in", login_path, class: 'button'
