added registration number in footer

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -8,6 +8,7 @@
         -# encoded email address
         <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#104;&#101;&#108;&#108;&#111;&#64;&#99;&#111;&#100;&#101;&#98;&#97;&#114;&#46;&#105;&#111;&#63;&#83;&#117;&#98;&#106;&#101;&#99;&#116;&#61;&#72;&#101;&#108;&#108;&#111;&#32;&#99;&#111;&#100;&#101;&#98;&#97;&#114;">&#104;&#101;&#108;&#108;&#111;&#64;&#99;&#111;&#100;&#101;&#98;&#97;&#114;&#46;&#105;&#111;</a>
 
+
     .large-3.columns
       %ul.no-bullet
         %li= link_to t("navigation.code_of_conduct"), code_of_conduct_path
@@ -27,3 +28,8 @@
 
     .large-3.columns
       = render partial: 'shared/social_media'
+
+  .row
+    .large-12.columns
+      %p.registration
+        Registered UK company number: 10791813
