--- a/app/assets/stylesheets/partials/_layout.scss
+++ b/app/assets/stylesheets/partials/_layout.scss
@@ -1,6 +1,6 @@
 footer {
   background-color: $primary-color;
-  padding: 60px 0;
+  padding: 30px 0 0 0;
 
   a {
     color: $white;
@@ -8,6 +8,12 @@ footer {
     &:hover {
       color: $secondary-color;
     }
+  }
+
+  .registration {
+    color: $white;
+    font-size: 0.75rem;
+    margin-top: 30px;
   }
 
   .social-media a {
