add donating through the codebar website

--- a/app/assets/stylesheets/partials/_sponsors.scss
+++ b/app/assets/stylesheets/partials/_sponsors.scss
@@ -4,3 +4,12 @@
   }
 }
 
+.small-image {
+  max-height: 100px;
+}
+
+.sponsor-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
