--- a/app/views/jobs/new.html.haml
+++ b/app/views/jobs/new.html.haml
@@ -20,7 +20,7 @@
             %input#short{type: 'checkbox'}
             %label{for: 'short'} It's short and to the point
 
-      =link_to "Make payment", "https://donate.codebar.io", class: 'button tiny round'
+      =link_to "Make payment", "https://codebar.io/donations/new", class: 'button tiny round'
       %br
       %small *Posted jobs will only be visible to our members after they are reviewed and approved by an organiser.
 
