--- a/app/views/layouts/_meta.html.haml
+++ b/app/views/layouts/_meta.html.haml
@@ -5,7 +5,7 @@
 %meta{ property: 'og:type', content: 'website' }
 %meta{ property: 'og:locale', content: 'en_GB' }
 %meta{ property: 'og:site_name', content: 'codebar' }
-%meta{ name: 'keywords', content: 'codebar, programming, diversity, html, css, javascript, ruby' }
+%meta{ name: 'keywords', content: 'codebar, programming, diversity, html, css, javascript, ruby, python' }
 %meta{ property: 'og:image', content: 'http://codebar.io/images/logo-square.png' }
 %meta{ property: 'og:url', content: "http://codebar.io#{url_for(nil)}" }
 %meta{ property: 'og:title', content: 'codebar' }
