--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -24,7 +24,7 @@
         %li= link_to t("navigation.coaches"), coaches_path
         %li= link_to t("navigation.sponsors"), sponsors_path
         %li= link_to t("navigation.events"), events_path
-        -# %li.active= link_to t("navigation.donate"), "http://donate.codebar.io"
+        %li.active= link_to t("navigation.donate"), new_donation_path
 
     .large-3.columns
       = render partial: 'shared/social_media'
