amend size of button on homescreen

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -25,7 +25,7 @@
           Sign up to join our vibrant community and attend our workshops.
 
         .text-center
-          = link_to "Sign up as a student", new_member_path, class: 'button tiny'
+          = link_to "Sign up as a student", new_member_path, class: 'button'
       .large-4.columns
         .text-center
           %h4 Coaches
@@ -33,7 +33,7 @@
           We encourage new students to work on our HTML/CSS, JavaScript, Ruby, Python or Git #{link_to "tutorials", "http://tutorials.codebar.io"}. We also help them understand programming concepts.
         %p Therefore  are always on the lookout for more developers to join our community and help coach at our workshops.
         .text-center
-          = link_to "Sign up as a coach", new_member_path, class: 'button tiny'
+          = link_to "Sign up as a coach", new_member_path, class: 'button'
       .large-4.columns
         .text-center
           %h4 Workshops
@@ -44,7 +44,7 @@
 
 
         .text-center
-          = mail_to "hello@codebar.io", "Host a workshop", class: 'button tiny'
+          = mail_to "hello@codebar.io", "Host a workshop", class: 'button'
 
 
   %section#chapter.stripe
