adding link to jobs index page in main nav

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -24,6 +24,7 @@
         %li= link_to t("navigation.coaches"), coaches_path
         %li= link_to t("navigation.sponsors"), sponsors_path
         %li= link_to t("navigation.events"), events_path
+        %li= link_to t("navigation.jobs"), jobs_path
         %li.active= link_to t("navigation.donate"), new_donation_path
 
     .large-3.columns
