--- a/app/views/admin/portal/guide.html.haml
+++ b/app/views/admin/portal/guide.html.haml
@@ -5,18 +5,27 @@
 
       %h3 Managing admin privileges
 
-      %p To manage roles, we use the Rolify gem. At the moment, the only way to add and remove privileges is through Rails console. There are two types of special roles: organisers and admins.
+      %p To manage roles, we use the Rolify gem. At the moment, the only way to add and remove privileges is through Rails console. There are three types of special roles: chapter organisers, meeting organisers and admins.
 
-      %p Organisers can create and modify sponsors and workshops only for chapters that they are permissioned. To make a member into an organiser of a chapter,
+      %p Chapter organisers can create and modify sponsors and workshops only for chapters that they are permissioned. To make a member into an organiser of a chapter,
 
       = raw @markdown.render("`Member.find(:id).add_role(:organiser, Chapter.find(:id))`")
 
-      %p Admins can create and modify sponsors, workshops, and events across all chapters. Admins can also create new chapters. To permission a member as an admin,
+      %p Meeting organisers can create and modify monthlies. To make a member into a meeting organiser,
+
+      = raw @markdown.render("`Member.find(:id).add_role(:organiser, Meeting`")
+
+      %p Admins can create and modify sponsors, workshops, meetings and events across all chapters. Admins can also create new chapters. To permission a member as an admin,
+
       = raw @markdown.render("`Member.find(:id).add_role(:admin)`")
 
       %p Similarly, to remove privileges,
 
-      = raw @markdown.render("`Member.find(:id).remove_role(:organiser)`")
+      = raw @markdown.render("`Member.find(:id).remove_role(:organiser, Chapter.find(:id))`")
+
+      = raw @markdown.render("`Member.find(:id).remove_role(:organiser, Meeting)`")
+
+      = raw @markdown.render("`Member.find(:id).remove_role(:admin)`")
 
       %p You can also check if a member has permissions. The second argument for organiser roles can be a specific chapter or :any.
 
