--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1130,8 +1130,8 @@ $table-margin-bottom: rem-calc(10);
 $thumb-border-style: none;
 $thumb-border-width: rem-calc(1);
 // $thumb-border-color: #fff;
-$thumb-box-shadow: 1px 3px 3px 0 rgba(0, 0, 0, 0.5);
-$thumb-box-shadow-hover: 1px 3px 6px 0 rgba(0, 0, 0, 1);
+$thumb-box-shadow: none;
+$thumb-box-shadow-hover: 0 0 5px 0 rgba(0, 0, 0, 0.25);
 
 
 // Radius and transition speed for thumbs
