Update jobs index and show page

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -13,6 +13,10 @@
 @import 'partials/star-rating';
 @import 'partials/event';
 
+.row-spaced {
+  padding-bottom: 20px;
+}
+
 #banner,
 #chapter {
   margin-top: 30px;
