--- a/app/views/jobs/_show.html.haml
+++ b/app/views/jobs/_show.html.haml
@@ -10,7 +10,7 @@
           %h3
             = link_to(@job.company, @job.link_to_job)
             %small
-              %i.fa.fa-location-arrow
+              %i.fa.fa-map-marker
               = @job.location
 
 %br
