--- a/app/views/jobs/pending.html.haml
+++ b/app/views/jobs/pending.html.haml
@@ -11,7 +11,7 @@
         %h4
           =link_to job_preview_path(job) do
             #{job.title} at #{job.company}
-            %small.fa.fa-location-arrow
+            %small.fa.fa-map-marker
               = job.location
         =link_to job_preview_path(job) do
           %p
