--- a/app/views/jobs/index.html.haml
+++ b/app/views/jobs/index.html.haml
@@ -19,7 +19,7 @@
               - if job.expiry_date.past?
                 %label.label.alert Expired
             .h5
-              %i.fa.fa-location-arrow
+              %i.fa.fa-map-marker
               = job.location
           .medium-4.columns
             .right
