Align mission statement box to rest of grid

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -1,6 +1,6 @@
 %section.hero.opaque
   .row
-    .medium-offset-1.medium-6.columns
+    .medium-8.large-6.large-offset-3.columns
       %p.lead
         <strong>codebar</strong> is a non-profit initiative that facilitates the growth of a diverse tech community by running regular programming workshops.
 
