Add consistent headings to pages

--- a/app/views/dashboard/dashboard.html.haml
+++ b/app/views/dashboard/dashboard.html.haml
@@ -1,9 +1,9 @@
 .stripe.reverse
   .row
     .large-12.columns
-      %h2
+      %h1
         Dashboard
-%section
+.stripe.reverse
   .row
     .large-3.columns#sidebar
       =image_tag current_user.avatar(33)
@@ -42,4 +42,3 @@
               .medium-12.columns
                 %h4= date
             = render workshops
-            %br
