--- a/app/views/shared/_title.html.haml
+++ b/app/views/shared/_title.html.haml
@@ -1,6 +1,6 @@
-%section.hero.opaque
+%section.stripe.reverse
   .row
-    .medium-8.large-6.large-offset-3.columns
-      %h2= title
+    .large-12.columns
+      %h1= title
       - if date
         %span.date= date
