--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -130,7 +130,7 @@ $large-up: "#{$screen} and (min-width:#{lower-bound($large-range)})";
 
 // We use these to control header font sizes
 $h1-font-size: rem-calc(37);
-$h2-font-size: rem-calc(37);
+$h2-font-size: rem-calc(35);
 $h3-font-size: rem-calc(27);
 $h4-font-size: rem-calc(23);
 $h5-font-size: rem-calc(18);
@@ -1409,4 +1409,8 @@ a {
   margin-top: -105px;
   height: 105px;
   visibility: hidden;
+}
+
+h1 {
+  font-weight: 600;
 }
