--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -8,6 +8,7 @@
   .stripe
     .row
       .large-12.columns
+        %h2 About codebar
         %p.lead
           Our goal is to enable underrepresented people to learn programming in a safe and collaborative environment and expand their career opportunities. To achieve this we run free regular workshops, regular one-off events and try to create opportunities for our students making technology and coding more accessible.
     - if @testimonials.any?
@@ -17,40 +18,34 @@
 
   .stripe
     .row#showcase
+      .large-12.columns
+        %h2 Get involved
       .large-4.columns
-        .text-center
-          %h4 Students
+        %h3 Students
         %p Our students come from a variety of backgrounds. Some want to become full-time developers, whereas some would like to learn the basics of coding in a supportive environment.
-        %p
-          Sign up to join our vibrant community and attend our workshops.
-
-        .text-center
-          = link_to "Sign up as a student", new_member_path, class: 'button'
+        %p Sign up to join our vibrant community and attend our workshops.
+        = link_to "Sign up as a student", new_member_path, class: 'button'
       .large-4.columns
-        .text-center
-          %h4 Coaches
+        %h3 Coaches
         %p
           We encourage new students to work on our HTML/CSS, JavaScript, Ruby, Python or Git #{link_to "tutorials", "http://tutorials.codebar.io"}. We also help them understand programming concepts.
-        %p Therefore  are always on the lookout for more developers to join our community and help coach at our workshops.
-        .text-center
-          = link_to "Sign up as a coach", new_member_path, class: 'button'
+        %p
+          Therefore are always on the lookout for more developers to join our community and help coach at our workshops.
+        = link_to "Sign up as a coach", new_member_path, class: 'button'
       .large-4.columns
-        .text-center
-          %h4 Workshops
+        %h3 Workshops
         %p
           We are hosted by some amazing companies who support our cause. Our normal format is 30 minutes of socialising with food and drink, followed by a lightning talk then coding.
         %p
           Help our expansion and enable us to provide help and support to our chapters by hosting and sponsoring our workshops.
-
-
-        .text-center
-          = mail_to "hello@codebar.io", "Host a workshop", class: 'button'
+        = mail_to "hello@codebar.io", "Host a workshop", class: 'button'
 
 
   %section#chapter.stripe
     .events#container
       .row
         .large-8.columns
+          %h2 Upcoming events
           - if @upcoming_workshops.empty?
             %p
               = t("no_upcoming_events")
@@ -63,7 +58,7 @@
                 %h4= date
                 = render workshops
         .large-4.columns#chapters
-          %h3 Chapters
+          %h2 Chapters
           %ul.no-bullet
             - @chapters.each do |chapter|
               %li
