Add slack button to footer

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -29,3 +29,5 @@
 
     .large-3.columns
       = render partial: 'shared/social_media'
+      .right
+        %script{async: true, defer: true, src: "https://codebar-slack.herokuapp.com/slackin.js"}
